--- a/modules/buildndeploy/appspec.yml
+++ b/modules/buildndeploy/appspec.yml
@@ -12,7 +12,7 @@ phases:
   build:
     commands:
       - echo [+] Build started on `date`
-      - docker build -t $REPOSITORY_URI:latest .
+      - docker build --build-arg COMMIT="$CODEBUILD_RESOLVED_SOURCE_VERSION" --tag $REPOSITORY_URI:latest .
       - docker tag $REPOSITORY_URI:latest $REPOSITORY_URI:$IMAGE_TAG
   post_build:
     commands:
