--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -7,13 +7,16 @@ on:
 
 jobs:
   deploy:
-    name: Deploy
+    name: Deploy Staging
     runs-on: ubuntu-latest
 
     env:
       AWS_REGION: ${{secrets.AWS_REGION_DEFAULT}}
       AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
       AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+      TF_VAR_db_name: ${{secrets.DB_NAME}}
+      TF_VAR_db_username:  ${{secrets.DB_USERNAME}}
+      TF_VAR_db_passwd: ${{secrets.DB_PASSWORD}}
 
     steps:
     - name: "Code Checkout"
@@ -25,13 +28,6 @@ jobs:
         tf_actions_version: 0.12.21
         tf_actions_subcommand: "init"
 
-    - name: 'Terraform Plan Staging'
-      if: github.ref == 'refs/heads/master'
-      uses: hashicorp/terraform-github-actions@master
-      with:
-        tf_actions_version: 0.12.21
-        tf_actions_subcommand: "plan"
-      
     - name: "Terraform Apply Staging"
       if: github.ref == 'refs/heads/master'
       uses: hashicorp/terraform-github-actions@master
