--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -9,10 +9,15 @@ env:
 
 jobs:
   ci:
+    name: Test CI
     runs-on: ubuntu-latest
+
     env:
       AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
       AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+      TF_VAR_db_name: ${{secrets.DB_NAME}}
+      TF_VAR_db_username:  ${{secrets.DB_USERNAME}}
+      TF_VAR_db_passwd: ${{secrets.DB_PASSWORD}}
 
     steps:
     - name: "Code Checkout"
