--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -18,6 +18,7 @@ jobs:
       TF_VAR_db_name: ${{secrets.DB_NAME}}
       TF_VAR_db_username:  ${{secrets.DB_USERNAME}}
       TF_VAR_db_passwd: ${{secrets.DB_PASSWORD}}
+      TF_VAR_cloudflare_api_token: ${{secrets.CLOUDFLARE_API_TOKEN}}
 
     steps:
     - name: "Code Checkout"
