--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -21,7 +21,7 @@ jobs:
       TF_VAR_db_passwd: ${{secrets.DB_PASSWORD}}
       TF_VAR_db_username:  ${{secrets.DB_USERNAME}}
       TF_VAR_github_token: ${{secrets.GITHUB_TOKEN_ORG}}
-      TF_VAR_hostname_default: "api.covidzero.com.br"
+      TF_VAR_hostname_default: ${{secrets.HOSTNAME_DEFAULT}}
       TF_VAR_jwt_secret_key: ${{secrets.JWT_SECRET_KEY}}
       TF_VAR_repository_name: "hummingbird-v2"
       TF_VAR_repository_owner: "CovidZero"
